force-app/main/default/objects/C1ASCloudConnectorConfig__c/C1ASCloudConnectorConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>C1ASCloudConnectorConfig</label>
</CustomObject>