force-app/main/default/objects/C1ASCloudConnectorConfig__c/fields/Type__c.field-meta.xml
<CustomField>
        <fullName>Type__c</fullName>
        <description>Type of custom setting to be used in value query.</description>
        <label>Type</label>
        <length>15</length>
        <type>Text</type>
    </CustomField>