force-app/main/default/objects/C1ASCloudConnectorConfig__c/fields/Value10__c.field-meta.xml
<CustomField>
        <fullName>Value10__c</fullName>
        <label>Value10</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>