force-app/main/default/objects/C1ASCloudConnectorConfig__c/fields/Value2__c.field-meta.xml
<CustomField>
        <fullName>Value2__c</fullName>
        <description>Value to be stored away for later query, value 1-5 will be Concatenated and returned as 1 string</description>
        <label>Value2</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>