force-app/main/default/objects/C1ASCloudConnectorConfig__c/fields/Value3__c.field-meta.xml
<CustomField>
        <fullName>Value3__c</fullName>
        <description>Value to be stored away for later query, value 1-5 will be Concatenated and returned as 1 string</description>
        <label>Value3</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>